# object-following-robot-genom3

./: .gitignore  CT_robot-genom3.pc.in  CT_robot.client.fcr  CT_robot.gen  CT_robot.wcet  Makefile.am  README.adoc  README.md  cnam-genom3-uninstalled.pc.in  cnam-genom3.pc.in  cnam.client.fcr  cnam.gen  cnam.rqst  cnam.wcet  configure.ac  end.sh  geometry.idl  start-cnam-hippo.sh  start-cnam.sh  start-cnam.tcl  start-hippo.sh  start.sh  start.tcl  twist.idl
CT_robot/: CT_robot-genom3-uninstalled.pc.in  CT_robot.gen  Makefile.am  README.adoc  end.sh  sensor.idl  start-hippo.sh  start.tcl
CT_robot/autoconf/: acCT_robot.h.in
codels/: CT_robot_codels.cc  CT_robot_track_codels.cc  DetectionCnam_codels.cpp  DetectionCnam_codels.hpp  Detection_codels.cpp  Makefile.am  cnam_codels.cc  cnam_track_codels.cc
